the 10th is nearly complete

--- a/themes/gophercon/layouts/partials/schedule.html
+++ b/themes/gophercon/layouts/partials/schedule.html
@@ -20,6 +20,9 @@
                 <div id="workshop-schedule" class="tab-pane schedule-tab active tab-pane-subtabs">
                   <ul class="nav nav-tabs">
                     <li role="presentation" class="active">
+                      <a data-toggle="tab" href="#registration-schedule">General</a>
+                    </li>
+                    <li role="presentation" class="">
                       <a data-toggle="tab" href="#hardcore-go-schedule">Hardcore Go Workshop</a>
                     </li>
                     <li role="presentation" class="">
@@ -30,31 +33,91 @@
 				            </li>
                   </ul>
                   <div class="tab-content">
-                    <div id="hardcore-go-schedule" class="schedule-tab schedule-item-tab tab-pane active">
+                    <div id="registration-schedule" class="schedule-tab schedule-item-tab tab-pane active">
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">9:00am - 5:00pm</span>
-                          <span class="location">Room 301</span>
+                          <span class="time">12:00pm - 6:00pm</span>
+                          <span class="location">Grand Concourse</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Go Bootcamp</span>
+                            <span class="title">Conference Registration</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">12:00am - 6:00pm</span>
+                          <span class="location">Exhibit Hall</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Sponsor/Exhibitor Move-in</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">6:00pm (tentative)</span>
+                          <span class="location">To be announced</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">GopherCon 2016 Kickoff Party</span>
+                          </div>
+                          <div class="abstract">
+                            <p>Join the Denver Go Meetup group to kickoff Gophercon 2016 in style! </p>
+                            <p><a href="http://www.meetup.com/Denver-Go-Language-User-Group/events/229341754/">Event Details</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div id="hardcore-go-schedule" class="schedule-tab schedule-item-tab tab-pane ">
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">7:30am - 9:30am</span>
+                          <span class="location">500's Corridor</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Workshop Registration</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">9:00am - 5:00pm</span>
+                          <span class="location">Room 501</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Hardcore Go Workshop</span>
                             <div class="speaker">
-                              <span class="name">William Kennedy</span>
+                              <span class="name">TBD</span>
                               <span class="designation">Ardan Labs</span>
                             </div>
                           </div>
                           <div class="abstract">
-                            <p>The Go Bootcamp is a 1 day class providing a comprehensive and idiomatic overview of the Go programming language. We will
-                              cover topics ranging from language syntax, Go's approach to object-oriented semantics, concurrency, channels and more. This
-                              class is great for anyone wanting to get a jump start on learning Go or wanting to understand more about the language and
-                              internals!</p>
+                            <p>If you are new to Go or have only been coding for less than a year, then this class is for you. Take a 7 hour tour of Go learning the specification, implementation and idioms to help make you a better Go developer. The class is going to be dense and fast paced. If you love the Go In Action book, this class makes it come to life. <br/><br/> Language Syntax<br/> Arrays, Slices and Maps<br/> Methods, Interfaces and Embedding<br/> Concurrency, Channels <br/><br/></p>
                             <p>
-                              <strong>Teacher:</strong>William Kennedy (
-                              <a href="https://twitter.com/goinggodotnet">@goinggodotnet</a>)
-                              <br />William Kennedy works in Miami, FL as a managing partner at Ardan Studios: a mobile, web and systems development company.
-                              He is also the co-author of the book Go In Action, the author of the blog
-                              <a href="http://www.goinggo.net/">GoingGo.Net</a>and the organizer for Miami's Go and MongoDB meetups.</p>
+                              <strong>Teacher:</strong>TBD 
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">12:00pm - 1:00pm</span>
+                          <span class="location">Room 501</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Break</span>
+                            <div class="speaker">
+                              <span class="name">In-Room Lunch</span>
+                            </div>
+                          </div>
+                          <div class="abstract">
+                            <p>Catered lunch will be provided in the training room. Beverage service will be continuous throughout the day.</p>
                           </div>
                         </div>
                       </div>
@@ -64,9 +127,9 @@
                           <img src="/images/temp-logos/ardan.png" width="100" />
                         </div>
                         <div class="col-md-9">
-                          <p>The Go Bootcamp is an all day workshop to get you up and running with Go provided by
+                          <p>The Hardcore Go Workshop is an all day workshop to get you up and running with Go provided by
                             <a href="https://ardanlabs.com">Ardan Labs.</a>Tickets for this workshop can be purchased at an additional cost.</p>
-                          <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange"
+                          <a href="https://ti.to/gophercon/gophercon-2016" class="btn btn-orange"
                           target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a>
                           </p>
                         </div>
@@ -75,15 +138,26 @@
                     <div id="advanced-go-schedule" class="schedule-tab schedule-item-tab tab-pane">
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">9:00am - 10:45am</span>
+                          <span class="time">7:30am - 9:30am</span>
+                          <span class="location">500's Corridor</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Workshop Registration</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">9:00am - 5pm</span>
                           <span class="location">Room 503</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Advanced Go</span>
+                            <span class="title">Advanced Go Workshop</span>
                             <div class="speaker">
                               <span class="name">TBD</span>
-                              <span class="designation">TBD</span>
+                              <span class="designation">Ardan Labs</span>
                             </div>
                           </div>
                           <div class="abstract">
@@ -126,6 +200,17 @@
                       </div>
                     </div>
                     <div id="building-api-schedule" class="schedule-tab schedule-item-tab tab-pane">
+                      <div class="row schedule-item">
+                        <div class="col-md-3 schedule-item-slot">
+                          <span class="time">7:30am - 9:30am</span>
+                          <span class="location">500's Corridor</span>
+                        </div>
+                        <div class="col-md-9 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">Workshop Registration</span>
+                          </div>
+                        </div>
+                      </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 5:00am</span>
@@ -181,7 +266,7 @@
                           <img src="/images/gopheracademy-logo.png" width="100" />
                         </div>
                         <div class="col-md-9">
-                          <p>This event is a highly focused lessons on using Go to deliver an HTTP based API. It is taught
+                          <p>This event is a highly focused workshop on using Go to deliver an HTTP based API. It is taught
                             by renowned community members and provided by
                             <a href="https://www.gopheracademy.com">Gopher Academy.</a>. Tickets for this workshop can be purchased at an additional cost, and do not include admission to the main conference.</p>
                           <a href="https://ti.to/gophercon/gophercon-2016"
