starting schedule for day 2 - need to break out into tabs

--- a/themes/gophercon/layouts/partials/schedule.html
+++ b/themes/gophercon/layouts/partials/schedule.html
@@ -280,68 +280,101 @@
                 <div id="day1-schedule" class="tab-pane schedule-item-tab schedule-tab">
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
-                      <span class="time">8:30am</span>
-                      <span class="location">Mile High Ballroom 3-4</span>
+                      <span class="time">6:30am - 6:00pm</span>
+                      <span class="location">Grand Concourse</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
-                        <span class="title">Welcome</span>
-                      </div>
-                      <div class="abstract">
-                        <p>Welcome ceremony and announcements.</p>
+                        <span class="title">Conference Registration</span>
                       </div>
                     </div>
                   </div>
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
-                      <span class="time">8:40am</span>
+                      <span class="time">8:00am - 9:00am</span>
+                      <span class="location">Dining Den - Mile High Ballroom</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">Breakfast</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">8:00am - 5:00pm</span>
+                      <span class="location">Mile High Ballroom</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">Sponsor Tables Open</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">9:00am</span>
+                      <span class="location">Mile High Ballroom 3-4</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">Welcome to Gophercon</span>
+                        <div class="speaker">
+                          <span class="name">
+                            Erik St. Martin and Brian Ketelsen
+                          </span>
+                          <span class="designation">GopherCon Organizers</span>
+                        </div>
+                      </div>
+                      <div class="abstract">
+                        <p>Erik and Brian welcome you to GopherCon 2016.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">9:10am - 9:40am</span>
+                      <span class="location">Mile High Ballroom 3-4</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">Opening Keynote</span>
+                        <div class="speaker">
+                          <span class="name">
+                            TBD
+                          </span>
+                          <span class="designation">Keynote Speaker</span>
+                        </div>
+                      </div>
+                      <div class="abstract">
+                        <p>Keynote Presentation.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">9:40am</span>
                       <span class="location">Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
                         <span class="title">
-                          <a href="/talks/opening-keynote">Opening Keynote</a>
+                          Plenary Session 1
                         </span>
                         <div class="speaker">
                           <span class="name">
-                            <a href="/speakers/russ-cox">Russ Cox</a>
+                            TBD
                           </span>
-                          <span class="designation">Engineer at Google</span>
                         </div>
                       </div>
                       <div class="abstract">
-                        <p></p>
+                        <p>TBD</p>
                       </div>
                     </div>
                   </div>
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
-                      <span class="time">9:30am</span>
-                      <span class="location">Mile High Ballroom 3-4</span>
-                    </div>
-                    <div class="col-md-9 schedule-item-details">
-                      <div class="schedule-item-summary">
-                        <span class="title">
-                          <a href="/talks/go-kit">Go Kit: A Standard Library for Distributed Programming</a>
-                        </span>
-                        <div class="speaker">
-                          <span class="name">
-                            <a href="/speakers/peter-bourgon">Peter Bourgon</a>
-                          </span>
-                        </div>
-                      </div>
-                      <div class="abstract">
-                        <p>Go has emerged as the language of the server, but it remains underrepresented in large, consumer-focused companies like
-                          Facebook, Twitter, Netflix, and SoundCloud. These organizations have largely adopted JVM-based tech stacks for their business
-                          logic, owing in large part to libraries and ecosystems that directly support their service-oriented architectures.</p>
-                        <p>To reach its next level of success, Go needs more than simple primitives and idioms. It needs a comprehensive toolkit, for
-                          coherent distributed programming in the large. This talk describes Go kit, a toolkit for Go in the modern SOA.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row schedule-item">
-                    <div class="col-md-3 schedule-item-slot">
-                      <span class="time">10:00am</span>
+                      <span class="time">10:10am</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -351,59 +384,53 @@
                   </div>
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
-                      <span class="time">10:40am</span>
+                      <span class="time">10:30am</span>
                       <span class="location">Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
                         <span class="title">
-                          <a href="/talks/delve">Delve Into Go</a>
+                          Plenary Session 2
                         </span>
                         <div class="speaker">
                           <span class="name">
-                            <a href="/speakers/derek-parker">Derek Parker</a>
+                            TBD
                           </span>
-                          <span class="designation">Engineer at Hashrocket</span>
                         </div>
                       </div>
                       <div class="abstract">
-                        <p>A good debugger is an essential tool for any software engineer – but Go has some unique characteristics (the runtime scheduler,
-                          for instance) that make traditional debuggers unfeasible. So I wrote Delve, a debugger tailored specifically for Go.</p>
-                        <p>When your software misbehaves, how can you glean insight into its unruliness?</p>
-                        <p>To answer that we’ll take a deep dive into Delve. We’ll explore what makes software like Delve work, how it aims to solve
-                          problems with existing debuggers, and how you can leverage Delve.</p>
+                        <p>Plenary Session 2.</p>
                       </div>
                     </div>
                   </div>
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
-                      <span class="time">11:15am</span>
+                      <span class="time">11:00am</span>
                       <span class="location">Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
                         <span class="title">
-                          <a href="/talks/code-generation">Code Generation For The Sake Of Consistency</a>
+                          Plenary Session 3
                         </span>
                         <div class="speaker">
                           <span class="name">
-                            <a href="/speakers/sarah-adams">Sarah Adams</a>
+                            TBD
                           </span>
-                          <span class="designation">Software Engineer at Restless Bandit</span>
                         </div>
                       </div>
                       <div class="abstract">
-                        <p>Maintaining consistency within a growing project is a challenge. I have struggled with my company’s Go web API as it has
-                          grown over the past two years, trying to find a nice solution to this intra-project consistency problem without resorting
-                          to a large-scale framework.</p>
-                        <p>In my mind, there are three general layers to project consistency:</p>
-                        <ul>
-                          <li>consistency in implementation among similar bits of code</li>
-                          <li>consistency in black-box behavior among similar endpoints or commands</li>
-                          <li>consistency between actual behavior and documented behavior (documentation accuracy)</li>
-                        </ul>
-                        <p>This talk will outline how I have leveraged small-scale code and documentation generator tools for each of the three layers
-                          outlined above, specifically for the sake of consistency in a growing Go application without using a large-scale framework.</p>
+                        <p>Plenary Session 3.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">11:30am</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">Break</span>
                       </div>
                     </div>
                   </div>
@@ -415,20 +442,16 @@
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
                         <span class="title">
-                          <a href="/talks/deadlocks-leaks">A Practical Guide to Preventing Deadlocks and Leaks in Go</a>
+                          Plenary Session 4
                         </span>
                         <div class="speaker">
                           <span class="name">
-                            <a href="/speakers/richard-fliam">Richard Fliam</a>
+                            TBD
                           </span>
-                          <span class="designation">Software Engineer Lead on Comcast VIPER’s Pillar linear packager</span>
                         </div>
                       </div>
                       <div class="abstract">
-                        <p>Communicating Sequential Processes (CSP) are a foundational element of writing Go code. Our Go application, Pillar, processes
-                          15 gigabits per second, packages over 3000 channels, serves millions of users, and runs on more than 450 servers nationwide.</p>
-                        <p>While writing Pillar, we developed five guidelines for the use of Go and CSP. Guidelines that helped us prevent deadlocks,
-                          prevent resource leaks, and simplified our code. Go developers will find lasting value in these battle-tested guidelines.</p>
+                        <p>Plenary Session 4.</p>
                       </div>
                     </div>
                   </div>
