add top navigation

--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -1,16 +1,32 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">
-        <img alt="GopherCon" src="/images/cowboy-color.png">
-      </a>
+<div class="nav-container">
+  <nav class="relative-nav">
+    <div class="colors-container">
+      <div class="colors">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-2"></div>
+        <div class="col-xs-2"></div>
+        <div class="col-xs-2"></div>
+        <div class="col-xs-2"></div>
+        <div class="col-xs-2"></div>
+      </div>
     </div>
-      <ul class="nav navbar-nav navbar-right">
-	<li><a href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
-        <li><a href="/code-of-conduct">Code of Conduct</a></li>
-        <li><a href="/speakers">Speakers</a></li>
-        <li><a href="/sessions">Sessions</a></li>
-        <li><a href="/sponsors">Sponsors</a></li>
-      </ul>
-  </div>
-</nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <img alt="Logo" class="logo logo-dark" src="/2016/img/gophercon2016-2.png">
+        </div>
+    
+        <div class="col-md-10 text-right">
+          <ul class="menu">
+            <li><a class="inner-link" href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
+            <li><a class="inner-link" href="/code-of-conduct">Code of Conduct</a></li>
+            <li><a class="inner-link" href="/speakers">Speakers</a></li>
+            <li><a class="inner-link" href="/sessions">Sessions</a></li>
+            <li><a class="inner-link" href="/sponsors">Sponsors</a></li>
+          </ul>
+          <div class="mobile-menu-toggle"><i class="icon icon_menu"></i></div>
+        </div>
+      </div>
+    </div>
+  </nav>
+</div>
