--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1,26 +1,46 @@
   {{ partial "header.html" . }}
     <body>
-    	<div class="loader">
-    		<div class="strip-holder">
-				<div class="strip-1"></div>
-				<div class="strip-2"></div>
-				<div class="strip-3"></div>
-    		</div>
-    	</div>
-
-    	
-    	<a id="top"></a>
-				
-      <div class="nav-container"></div>
-      <div class="main-container">
-        <div class="row colors">
-          <div class="col-xs-2"></div>
-          <div class="col-xs-2"></div>
-          <div class="col-xs-2"></div>
-          <div class="col-xs-2"></div>
-          <div class="col-xs-2"></div>
-          <div class="col-xs-2"></div>
+      <div class="loader">
+        <div class="strip-holder">
+          <div class="strip-1"></div>
+          <div class="strip-2"></div>
+          <div class="strip-3"></div>
         </div>
+      </div>
+    	<a id="top"></a>
+      <div class="nav-container">
+				<nav class="overlay-nav">
+          <div class="colors-container">
+            <div class="colors">
+              <div class="col-xs-2"></div>
+              <div class="col-xs-2"></div>
+              <div class="col-xs-2"></div>
+              <div class="col-xs-2"></div>
+              <div class="col-xs-2"></div>
+              <div class="col-xs-2"></div>
+            </div>
+          </div>
+					<div class="container">
+						<div class="row">
+							<div class="col-md-2">
+								<img alt="Logo" class="logo logo-dark" src="2016/img/gophercon2016-2.png">
+							</div>
+					
+							<div class="col-md-10 text-right">
+								<ul class="menu">
+                  <li><a class="inner-link" href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
+                  <li><a class="inner-link" href="/code-of-conduct">Code of Conduct</a></li>
+                  <li><a class="inner-link" href="/speakers">Speakers</a></li>
+                  <li><a class="inner-link" href="/sessions">Sessions</a></li>
+                  <li><a class="inner-link" href="/sponsors">Sponsors</a></li>
+								</ul>
+								<div class="mobile-menu-toggle"><i class="icon icon_menu"></i></div>
+							</div>
+						</div>
+					</div>
+				</nav>
+      </div>
+      <div class="main-container">
         <section class="hero-slider">
           <ul class="slides">
             <li class="video-header">
