cleanup style of schedule

--- a/themes/gophercon/layouts/partials/schedule.html
+++ b/themes/gophercon/layouts/partials/schedule.html
@@ -121,8 +121,7 @@
                           </div>
                         </div>
                       </div>
-                      <hr />
-                      <div class="row">
+                      <div class="row schedule-item">
                         <div class="col-md-3 text-right">
                           <img src="/images/temp-logos/ardan.png" width="100" />
                         </div>
@@ -466,7 +465,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row schedule-item">
+                  <div class="row schedule-item advanced">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">13:20pm</span>
                       <span class="location">Mile High Ballroom 3-4</span>
@@ -493,7 +492,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row schedule-item">
+                  <div class="row schedule-item beginner">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">1:55pm</span>
                       <span class="location">Mile High Ballroom 3-4</span>
