cleanup sessions and speaker pages to be consistent with homepage design

--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2">
-          <img alt="Logo" class="logo logo-dark" src="/2016/img/gophercon2016-2.png">
+          <a href="/"><img alt="Logo" class="logo logo-dark" src="/2016/img/gophercon2016-2.png"></a>
         </div>
     
         <div class="col-md-10 text-right">
