--- a/themes/gophercon/static/2016/css/theme-gophercon.css
+++ b/themes/gophercon/static/2016/css/theme-gophercon.css
@@ -2739,3 +2739,12 @@ body .colors .col-xs-2:nth-child(6n+0) {
 .speakers {
   background-color: #f5f5f5;
 }
+
+.main h2 {
+  margin-bottom: 20px;
+}
+
+.main h4 {
+  margin-top: 24px;
+  margin-bottom: 12px;
+}
